# screensavers.rsxs

./: .travis.yml  CMakeLists.txt
debian/: control  kodi-screensaver-rsxs-biof.install  kodi-screensaver-rsxs-busyspheres.install  kodi-screensaver-rsxs-colorfire.install  kodi-screensaver-rsxs-drempels.install  kodi-screensaver-rsxs-feedback.install  kodi-screensaver-rsxs-hufo_smoke.install  kodi-screensaver-rsxs-hufo_tunnel.install  kodi-screensaver-rsxs-lorenz.install  kodi-screensaver-rsxs-matrixview.install  kodi-screensaver-rsxs-spirographx.install  kodi-screensaver-rsxs-sundancer2.install  rules
depends/common/gli/: gli.sha256  gli.txt
lib/Implicit/: impCubeVolume.cpp  impCubeVolume.h  impSurface.cpp  impSurface.h
lib/gli/: CMakeLists.txt
lib/glm/: CMakeLists.txt
lib/kodi/OpenGL/: CMakeLists.txt  GL.h  Shader.cpp  Shader.h  Texture.cpp  Time.h
screensaver.rsxs.biof/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.busyspheres/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.colorfire/resources/shaders/: frag.glsl
screensaver.rsxs.cyclone/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.drempels/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.euphoria/resources/shaders/: frag.glsl
screensaver.rsxs.fieldlines/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.flocks/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.flux/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.helios/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.hufo_smoke/: addon.xml.in
screensaver.rsxs.hufo_smoke/resources/: settings.xml
screensaver.rsxs.hufo_smoke/resources/language/resource.language.en_gb/: strings.po
screensaver.rsxs.hufo_smoke/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.hufo_tunnel/: addon.xml.in
screensaver.rsxs.hufo_tunnel/resources/: settings.xml
screensaver.rsxs.hufo_tunnel/resources/language/resource.language.en_gb/: strings.po
screensaver.rsxs.hufo_tunnel/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.matrixview/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.plasma/resources/language/resource.language.en_gb/: strings.po
screensaver.rsxs.plasma/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.skyrocket/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.solarwinds/resources/shaders/: frag.glsl  vert.glsl
screensaver.rsxs.spirographx/resources/: settings.xml
screensaver.rsxs.spirographx/resources/language/resource.language.en_gb/: strings.po
screensaver.rsxs.spirographx/resources/shaders/: frag.glsl  vert.glsl
src/biof/: main.cpp  main.h
src/busyspheres/: main.cpp  main.h
src/colorfire/: CMakeLists.txt  main.cpp  main.h
src/cyclone/: main.cpp  main.h
src/drempels/: CMakeLists.txt  TexMgr.cpp  main.cpp  main.h
src/euphoria/: main.cpp  main.h
src/feedback/: main.cpp  main.h
src/fieldlines/: ion.cpp  ion.h  main.cpp  main.h
src/flocks/: main.cpp  main.h
src/flux/: main.cpp  main.h
src/helios/: main.cpp  main.h
src/hufo_smoke/: CMakeLists.txt  FMotion.cpp  FMotion.h  main.cpp  main.h
src/hufo_tunnel/: CMakeLists.txt  main.cpp  main.h
src/hyperspace/: causticTextures.cpp  causticTextures.h  flare.cpp  flare.h  goo.cpp  goo.h  light.h  main.cpp  main.h  mipmap.cpp  mipmap.h  splinePath.cpp  splinePath.h  starBurst.cpp  starBurst.h  stretchedParticle.cpp  stretchedParticle.h  tunnel.cpp  tunnel.h  wavyNormalCubeMaps.cpp  wavyNormalCubeMaps.h
src/lattice/: CMakeLists.txt  main.cpp  main.h
src/lorenz/: main.cpp  main.h
src/matrixview/: main.cpp  main.h
src/plasma/: main.cpp  main.h
src/skyrocket/: flare.cpp  flare.h  light.h  main.cpp  main.h  particle.cpp  particle.h  shockwave.cpp  shockwave.h  smoke.cpp  smoke.h  soundEngine.cpp  soundEngine.h  world.cpp  world.h
src/solarwinds/: main.cpp  main.h
src/spirographx/: main.cpp  main.h
src/sundancer2/: main.cpp  main.h
